[fit] filter problem